--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600&display=swap"
             rel="stylesheet">
-        <title>Exam</title>
+        <title>Lesson</title>
     </head>
     <body>
         <header class="header">
             <div class="container header__container">
                 <a href="#">
-                    <img src="./images/logo.png" alt="">
+                    <img src="logo.png" alt="">
                 </a>
 
                 <ul class="nav__menu">
